--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .content {
   margin-top: 75px;
 }
@@ -24,7 +28,6 @@
 
 audio {
   margin-top: 10px;
-  color: white;
   }
 
 img {
