--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ a {
 }
 
 .glyphicon-trash {
-  font-size: 20px;
-  margin-right: 2em;
+  font-size: 1em;
+  margin-left: 1em;
 }
 
 /*.article-link-bar {
